update the css and added an box's

--- a/header.html
+++ b/header.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="css/header.css">
+        
     </head>
     <body>
         <header>
             <div class="color-container"></div>
+            
             <img src="img/Group 14.png" alt="company-logo" id="company-logo">
             <nav>
                 <ul>
@@ -22,5 +24,27 @@
             <p id="welkom">welkom!</p>
             <p id="intro-text-bold">Bij MTi opleidingen en mediation</p>
         </div>
-        </body>
+        <h1 id="intro-heading">Vooruit in gesprek</h1>
+        <p id="intro-para">MTi stelt jou en/of jouw organisatie in staat conflictueuze situaties gezamenlijk op te lossen. Als specialist in opleidingen op gebied van mediation(vaardigheden) en effectief omgaan met conflictsituaties. Als ervaren, toegankelijke, kundige mediators. Ons doel? Een maatschappij waar mensen met elkaar kunnen - en blijven - praten om samen oplossingen te zoeken, ook als het lastig wordt.</p>
+        <div id="mediators-box">
+            <div class="bg-color-mediators"></div>
+            <img src="img/Group 11.png" alt="mediators-image">
+            <h3 id="mediatiors-heading">Mediatiors</h3>
+            <p id="mediatiors-para">Carine, Marjanne en Elena zijn ervaren MfN- registermediators, gespecialiseerd in vastgelopen situaties binnen- en tussen ondernemingen. </p>
+        </div>
+        <div id="opleidingen-box">
+            <div class="bg-color-opleidingen"></div>
+            <img src="img/Group 10.png" alt="opleidingen-img">
+            <h3 id="opleidingen-heading">Opleidingen</h3>
+            <p id="opleidingen-para">Carine, Marjanne en Elena zijn ervaren MfN- registermediators, gespecialiseerd in vastgelopen situaties binnen- en tussen ondernemingen. </p>
+        </div>
+        <a href="#" id="opleidingen-link">Kies jouw opleiding uit</a>
+        <div id="incompany-box">
+            <div class="bg-color-incompany"></div>
+            <img src="img/Group 9.png" alt="incompany-image">
+            <h3 id="incompany-heading">Incompany</h3>
+            <p id="incompany-para">Carine, Marjanne en Elena zijn ervaren MfN- registermediators, gespecialiseerd in vastgelopen situaties binnen- en tussen ondernemingen. </p>
+        </div>
+        <a href="#" id="incompany-link">Teamtraining binnen uw bedrijf</a><span class="arrow3">&rarr;</span>
+    </body>
 </html>
